# RGBDCapture

./: .gitignore  .gitmodules  prebuild.sh
RGBDCapture/: CMakeLists.txt  OpenNISensor.cpp  OpenNISensor.h  RGBDSensor.cpp  RGBDSensor.h  global.h  main.cpp
